# backend/api/openapi.yaml
@@ -3,8 +3,6 @@ info:
   title: Server Management
   version: 1.0.0
 servers:
-- url: https://virtserver.swaggerhub.com/BlueCyber/Server/1.0.0
-  description: SwaggerHub API Auto Mocking
 - url: https://localhost:3000
 tags:
 - name: user
@@ -328,17 +326,17 @@ paths:
       security:
       - bearerAuth: []
       x-swagger-router-controller: Others
-  /exportCSV:
+  /exportXLSX:
     get:
       tags:
       - others
-      summary: exportCSV
-      operationId: exportCSVGET
+      summary: exportXLSX
+      operationId: exportXLSXGET
       responses:
         "200":
           description: Server Information
           content:
-            application/csv:
+            application/vnd.openxmlformats-officedocument.spreadsheetml.sheet:
               schema:
                 type: string
                 format: binary
